22 Jan 2003 SMP updates - Greg Smith
22 Jan 2003 Fix for regparm attribute problem - Greg Smith
14 Jan 2003 relax stress write and readahead criteria - Greg Smith
12 Jan 2003 select() kludge for win32 for high cpu - Greg Smith
10 Jan 2003 Display a reasonable error message if a track image
            is probably compressed using a locally unsupported
            compression algorithm (such as bzip2) - Greg Smith
09 Jan 2003 Require `-f' option for cckdcdsk & cckdcomp if
            file has OPENED bit on - Greg Smith
09 Jan 2003 Correct & enable DAS for S/370 - Jan Jaeger
08 Jan 2003 Add dummy fix page S/370 MVS assist - Jan Jaeger
07 Jan 2003 Updated cckd utilities (cckddump & cckdload) - Greg Smith
07 Jan 2003 Fix/recover possible cckd corruption - Greg Smith
07 Jan 2003 Add Region Relocate, I/O- External- and Wait-assists - Jan Jaeger
06 Jan 2003 delay exit in config.c to give time to display message - Fish
06 Jan 2003 minor changes to tapedev.c read_omadesc function - JCS
06 Jan 2003 Pre-init residual to zero in tapedev execute_ccw -
            freige@fibertel.com.ar by Fish
            thread's select list before closing it. - Fish
06 Jan 2003 Fix to 'unbind_device' to remove listening socket from panel
            thread's select list before closing it. - Fish
04 Jan 2003 CTCI_Init (ctc_ctci.c): malloc working CTCBLK to work around
            gcc 3.x bug caused by large vars allocated on stack - Fish
03 Jan 2003 Fix fthreads to behave as pthreads does regarding return codes
            (conform to SUS (Single UNIX Specification) rather than DCE
            (Distributed Computing Environment) semantics; affected CTCI
            logic's 'timed_wait_condition' return code tests) - Fish
03 Jan 2003 Added ARCHMODE to other "IPL failure" messages too - Fish
27 Dec 2002 Added comprehensive details to README.CVS document - Fish
27 Dec 2002 Fix bug ctc logic to accept MAC addr in lieu of IP addr - Fish
27 Dec 2002 Fix warning about IFC_IOCtl in tuntap.c - Fish